

Directory modules/leap/virtual-platform/virtual-devices/devices/central-cache
 central-cache-backing-store.bsv Locally Modified          152 

Force a scheduling order of central cache evict vs. fill when talking to the
backing storage.  I've never seen an instance in which the code has failed,
since the timing is unlikely.

----------
mcadler     Date: Fri Sep  9 10:38:10 EDT 2011  CSN: CSN-leap-154
                  Fri Sep  9 14:38:10 UTC 2011


Directory modules/leap/build-support/build-pipelines/stages/multifpga
 tool.py                   Locally Modified          153 

- Build sub-models in multi_fpga subdirectory of parent instead of in root.
- Build rule for sub-models generates a result other than the direct result
  of the sub model build.  The old code forced a rebuild of the top level BSV
  every time, even if it was built already.
- Return status of sub-model builds so parent SCons aborts correctly.


----------
mcadler     Date: Fri Sep  9 13:28:41 EDT 2011  CSN: CSN-leap-155
                  Fri Sep  9 17:28:41 UTC 2011


Directory modules/leap/build-support/build-pipelines/stages/xilinx
 XILINX_XST.py             Locally Modified          154 

Revert to previous version, where child xcf has the same contents as the top level.
Right now, the "top level" file has configuration for all synthesis boundaries.
It also has critical bluespec.xcf configuration.  Without these, builds below
top level are bound to have problems.

The real solution is more complicated and requires some notion of global vs.
local xcf configuration.

----------
mpellaue    Date: Wed Sep 14 10:50:56 EDT 2011  CSN: CSN-leap-158
                  Wed Sep 14 14:50:56 UTC 2011


Directory debian
 control                   Locally Modified          157 
 changelog                 Locally Modified          157 


Updating debian files for next release, logically set at 11.12 since the
previous ones were 11.03 and 11.06 and 11.09, no matter what schedule we
predict....
