@@ -17,15 +17,3 @@ STARTER_DEVICE_SERVER_CLASS::STARTER_DEVICE_SERVER_CLASS()
 STARTER_DEVICE_SERVER_CLASS::~STARTER_DEVICE_SERVER_CLASS()
 {
 }
-
-// client: Start
-void
-STARTER_DEVICE_SERVER_CLASS::Start()
-{
-}
-
-// client: WaitForHardware
-void
-STARTER_DEVICE_SERVER_CLASS::WaitForHardware()
-{
-}
